[package]
name = "test_logger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1.0"
rand = "0.8"